Update the cheque address on the ways to give section of the donation page. (Fixes 540)

--- a/website/includes/ways-to-give.html
+++ b/website/includes/ways-to-give.html
@@ -9,10 +9,9 @@
     however please note that we can only accept checks in US dollars drawn on a US bank.')|format(class='font-bold') }}
   </p>
   <ul class="ways-to-give-list-info">
-    <li class="font-bold">MZLA Technologies Corporation</li>
-    <li>Attn: Thunderbird Donor Care</li>
-    <li>149 New Montgomery St, 4th Floor</li>
-    <li>San Francisco, CA 94105</li>
+    <li class="font-bold">MZLA</li>
+    <li>PO Box 25718</li>
+    <li>Pasadena CA 91185-5718</li>
   </ul>
   <p>{{ _('Please include your email address on the memo line of your check to help us track and attribute your gift.') }}</p>
 </section>
