Update the donation faq / ways to pay for donor care. (Fixes #547)

--- a/website/includes/ways-to-give.html
+++ b/website/includes/ways-to-give.html
@@ -15,3 +15,31 @@
   </ul>
   <p>{{ _('Please include your email address on the memo line of your check to help us track and attribute your gift.') }}</p>
 </section>
+
+<section class="font-md tracking-wide">
+  <h2 id="ways-to-give-iban" class="font-2xl text-blue-dark">{{ _('IBAN (via SEPA bank transfer)') }}</h2>
+
+  <!-- Multiple lists to preserve formatting -->
+  <ul class="ways-to-give-list-info">
+    <li class="font-bold">Account currency: Euro (EUR)</li>
+    <li>Name of the payee: SVB - MZLA Technologies Corporation</li>
+    <li>IBAN: DE05 5123 0500 0500 2158 09</li>
+    <li>Reason for payment: Thunderbird</li>
+  </ul>
+
+  <ul class="ways-to-give-list-info">
+    <li>Credit institution of the payee: Standard Chartered Bank</li>
+    <li>Registered office: Frankfurt, Germany</li>
+    <li>BIC: SCBLDEFX</li>
+  </ul>
+
+  <ul class="ways-to-give-list-info">
+    <li>MZLA official address:</li>
+    <li>149 New Montgomery St, 4th Floor</li>
+    <li>San Francisco, CA 94105</li>
+    <li>USA</li>
+  </ul>
+
+  <p>{{ _('Minimum donation amount: €20') }}</p>
+  <p>{{ _('Please note that due to the limited contact information we receive during the transfer process, we are unable to issue donation receipts.') }}</p>
+</section>
