--- a/website/includes/faq.html
+++ b/website/includes/faq.html
@@ -38,6 +38,21 @@
 
   <details class="faq-entry">
     <summary class="faq-question">
+      {{ _('Why do you need my address in order to process a gift?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed url=url('privacy.notices.donations'), website_privacy=url('privacy') %}
+      We understand that your privacy is very important -- we agree, and that's a core value of ours at Thunderbird and Mozilla.
+
+      Your address is part of our Payment Processing, Contact and Donation Information that we outline in our <a href="{{ url }}">Privacy Policy</a>. This data is used for payment processing, transactional receipts, fraud detection and record-keeping purposes.
+
+      If you want to know more about the personal information data we receive, the third-party vendors we trust, and how long we keep your data, please refer to our <a href="{{ website_privacy }}">Websites, Communications & Cookies Privacy Notice</a>.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
       {{ _('Does my gift give me access to tech support?') }}
     </summary>
     <p class="faq-answer">
@@ -104,22 +119,6 @@
 
   <details class="faq-entry">
     <summary class="faq-question">
-      {{ _('Why do you need my address in order to process a gift?') }}
-    </summary>
-    <p class="faq-answer">
-      {% trans trimmed url=url('privacy'), check=url('thunderbird.donate.ways-to-give.check') %}
-      We understand that your privacy is very important. We ask for a minimum amount of information required to process
-      credit card payments, including billing addresses. This allows our payment processor to verify your identity,
-      process your payment, and prevent fraudulent charges to your credit card. We keep your information private — if
-      you have questions, please refer to our <a href="{{ url }}">Privacy Policy</a>. If you would rather not fill in
-      your
-      information on our online form, you can mail us a <a href="{{ check }}">check</a>.
-      {% endtrans %}
-    </p>
-  </details>
-
-  <details class="faq-entry">
-    <summary class="faq-question">
       {{ _('Are there additional fees on my donation?') }}
     </summary>
     <p class="faq-answer">
@@ -145,6 +144,17 @@
       maintaining our own system from scratch. Our partners ensure we can accept a wide range of currencies/payment
       methods and remain PCI compliant in all of the countries that we accept gifts from. The transaction costs donors
       may choose to cover are based on an estimate of our overall costs. Due to many factors actual costs may fluctuate.
+      {% endtrans %}
+    </p>
+  </details>
+
+  <details class="faq-entry">
+    <summary class="faq-question">
+      {{ _('Why do one-time donations appear as recurring in the SEPA mandates?') }}
+    </summary>
+    <p class="faq-answer">
+      {% trans trimmed %}
+      When making a one-time gift through SEPA direct debit, you may notice a mention of recurrent transactions. This is because our payment processor Stripe only supports recurring transactions for this type of payment. Regardless of this, we will only charge you once and we will not make any further payments on your account without your authorization. Following the mandate, you will receive an official donation receipt that will clearly reflect the one-time donation.
       {% endtrans %}
     </p>
   </details>
