Centralize social media links into settings, and update the youtube link. (Fixes #556)
Adjust the newsletter social media links to use the url macro.

--- a/website/includes/site-footer.html
+++ b/website/includes/site-footer.html
@@ -36,13 +36,13 @@
       <ul class="list-none p-0 flex flex-wrap items-center justify-around {% if hide_social_footer %}hidden{% endif %}">
         <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(twitter)s on Twitter')|format(twitter='@mozthunderbird') }}"
-            href="https://twitter.com/mozthunderbird" data-link-type="footer" data-link-name="Twitter (Thunderbird)">
+            href="{{ url('thunderbird.social.twitter') }}" data-link-type="footer" data-link-name="Twitter (Thunderbird)">
             <span>{{ svg('twitter') }}</span>
             @mozthunderbird
           </a>
         </li>
         <li class="m-1">
-          <a class="social-link font-semibold" href="https://www.facebook.com/Thunderbird/" data-link-type="footer"
+          <a class="social-link font-semibold" href="{{ url('thunderbird.social.facebook') }}" data-link-type="footer"
             data-link-name="Facebook (Thunderbird)">
             <span>{{ svg('facebook') }}</span>
             {{ _('Thunderbird') }}
@@ -50,21 +50,21 @@
         </li>
         <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(youtube)s on YouTube')|format(youtube='@thunderbird3665') }}"
-            href="https://www.youtube.com/channel/UCuMTCmnwZPiXXVIy_TW6Bnw" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
+            href="{{ url('thunderbird.social.youtube') }}" data-link-type="footer" data-link-name="YouTube (Thunderbird)" rel="me">
             <span>{{ svg('youtube') }}</span>
             {{ _('Thunderbird') }}
           </a>
         </li>
         <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(linkedin)s on LinkedIn')|format(linkedin='thunderbird-email')}}"
-            href="https://www.linkedin.com/company/thunderbird-email/" data-link-type="footer" data-link-name="LinkedIn (Thunderbird)" rel="me">
+            href="{{ url('thunderbird.social.linkedin') }}" data-link-type="footer" data-link-name="LinkedIn (Thunderbird)" rel="me">
             <span>{{ svg('linkedin') }}</span>
             {{ _('Thunderbird') }}
           </a>
         </li>
         <li class="m-1">
           <a class="social-link font-semibold" title="{{ _('Follow %(mastodon)s on Mastodon')|format(mastodon='@thunderbird@mastodon.online') }}"
-            href="https://mastodon.online/@thunderbird" data-link-type="footer" data-link-name="Mastodon (Thunderbird)" rel="me">
+            href="{{ url('thunderbird.social.mastodon') }}" data-link-type="footer" data-link-name="Mastodon (Thunderbird)" rel="me">
             <span>{{ svg('mastodon') }}</span>
             @thunderbird@mastodon.online
           </a>
