Update beta instructions, and site footer (#544, #488)
* Fixing issue #544
* Fixing issue #488: Remove "now" from footer?

--- a/website/includes/new/site-footer.html
+++ b/website/includes/new/site-footer.html
@@ -33,7 +33,7 @@
       <p>
         {%trans%}
         <small>
-          Thunderbird is now part of <a href="https://blog.thunderbird.net/2020/01/thunderbirds-new-home/">MZLA Technologies Corporation</a>, a wholly owned subsidiary of Mozilla Foundation.
+          Thunderbird is part of <a href="https://blog.thunderbird.net/2020/01/thunderbirds-new-home/">MZLA Technologies Corporation</a>, a wholly owned subsidiary of Mozilla Foundation.
           Portions of this content are ©1998–2023 by individual contributors. Content available under a
           <a href="https://www.mozilla.org/foundation/licensing/website-content/">Creative Commons license</a>.
         </small>
