--- a/website/includes/site-footer.html
+++ b/website/includes/site-footer.html
@@ -103,7 +103,7 @@
 
     <p class="mt-6 mb-6 leading-normal">
       {%- trans url=url('foundation.licensing.website-content'),mzla=url('mzla.blog-post') -%}
-      Thunderbird is now part of
+      Thunderbird is part of
       <a href="{{ mzla }}" class="inline-link">MZLA Technologies Corporation</a>,
       a wholly owned subsidiary of Mozilla Foundation.
       Portions of this content are ©1998–{{ current_year }} by individual
