--- a/sites/old.thunderbird.net/includes/_enonly/system_requirements.html
+++ b/sites/old.thunderbird.net/includes/_enonly/system_requirements.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
-{% extends "includes/new/page.html" %}
+{% extends "includes/base-resp.html" %}
 
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Thunderbird — {version} System Requirements')|f(version=version) }}{% endblock %}
