Finished template exploration, and basic pass with the Who We Are page.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -5,4 +5,8 @@
 @import "./new/components/buttons.less";
 @import "./new/components/site-nav.less";
 
+// Page imports
+@import "./pages/home.less";
+@import "./pages/who-we-are.less";
+
 // Page template stuff
