--- a/assets/less/new/components/site-nav.less
+++ b/assets/less/new/components/site-nav.less
@@ -7,7 +7,7 @@
   padding-inline: 1rem;
   padding-block: 12px;
   background: var(--nav-bg);
-  color: var(--nav-txt);
+  color: var(--txt);
   border-bottom: 1px solid transparent;
   box-shadow: none;
   height: var(--nav-height);
