--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -29,4 +29,21 @@
     background: var(--nav-bg);
     color: var(--nav-txt);
   }
+
+  .section-text {
+    max-inline-size: 50%;
+  }
+
+  .section-text :where(h2) {
+    font-size: 2.75rem;
+    font-weight: 800;
+    margin: 0;
+  }
+
+  .section-text :where(h3) {
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin: 0;
+    margin-bottom: 2em;
+  }
 }
