Small job grid changes, and link the only available about page right now.

--- a/assets/less/pages/who-we-are.less
+++ b/assets/less/pages/who-we-are.less
@@ -67,12 +67,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
 
     .person {
 
       img {
         border-radius: 100%;
+      }
+      h5 {
+        margin: 0;
+        word-wrap: break-word;
+      }
+      span {
+        font-size: 0.75rem;
       }
     }
   }
