--- a/sites/www.thunderbird.net/includes/base/page.html
+++ b/sites/www.thunderbird.net/includes/base/page.html
@@ -22,7 +22,7 @@
       <div class="nav-links">
         <a href="#" class="nav-ln">{{_('Products')}}</a>
         <a href="#" class="nav-ln">{{_('Resources')}}</a>
-        <a href="#" class="nav-ln">{{_('About')}}</a>
+        <a href="./who-we-are.html" class="nav-ln">{{_('About')}}</a>
         <a href="#" class="nav-ln">{{_('Contribute')}}</a>
 
         <div class="header-download">
