--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -18,6 +18,7 @@
 
 .pre-footer-cover-container {
   position: relative;
+
   .page-separator-cover {
     color: black;
   }
@@ -49,10 +50,15 @@ header {
     font-size: 0.75rem;
     font-weight: 200;
   }
+
   .tagline {
     margin-top: 1rem;
     font-size: 4rem;
 
+  }
+
+  @media (max-width: @md) {
+    min-height: 300px;
   }
 }
 
@@ -81,11 +87,15 @@ header {
   margin-inline: auto;
   max-width: 1280px;
   overflow: hidden;
+
+  @media (max-width: @md) {
+    width: 100%;
+    padding-inline: 0;
+  }
 }
 
 .section-text {
-  max-inline-size: 60%;
-  text-wrap: balance;
+  max-inline-size: 55%;
   margin-inline: auto;
   margin-bottom: 2em;
   font-weight: 400;
@@ -93,6 +103,16 @@ header {
 
   &.tight {
     max-inline-size: 50%;
+  }
+
+  @media (max-width: @md) {
+    max-inline-size: 90%;
+    margin-inline: unset;
+    padding-inline: 1rem;
+
+    &.tight {
+      max-inline-size: 90%;
+    }
   }
 }
 
@@ -125,6 +145,13 @@ header {
     color: var(--accent);
     margin-right: 0.75rem;
   }
+
+  @media (max-width: @md) {
+    text-indent: -2.5rem;
+    li:before {
+      margin-right: 1rem;
+    }
+  }
 }
 
 
@@ -135,7 +162,9 @@ html {
 }
 
 @supports (font-variation-settings: normal) {
-  html { font-family: 'Inter var', sans-serif; }
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
 }
 
 picture,
@@ -158,7 +187,7 @@ body {
   display: none;
 }
 
-h1,h2 {
+h1, h2 {
   font-family: 'Metropolis', sans-serif;
   font-weight: 600;
 }
@@ -178,9 +207,11 @@ h1,h2 {
 .icon .icon-linux-fg {
   fill: transparent !important;
 }
+
 .icon-tux-alt .icon-linux-fg {
   fill: var(--color-gray-20) !important;
 }
+
 .icon-tux-alt .icon-linux-bg {
   fill: transparent !important;
 }
@@ -189,7 +220,6 @@ svg {
   max-height: 100%;
   max-width: 100%;
 }
-
 
 
 .nav-links {
@@ -370,7 +400,7 @@ section {
   width: var(--size);
   filter: drop-shadow(0 4px 4px var(--color-gray-10));
   animation: 20s infinite normal float-around,
-             20s infinite normal float-around-shadow;
+  20s infinite normal float-around-shadow;
   z-index: -1;
 }
 
@@ -494,7 +524,7 @@ section {
   position: absolute;
   inset-inline: 0;
   bottom: 0;
-  filter: drop-shadow( 0 0 50px var(--color-blue-30));
+  filter: drop-shadow(0 0 50px var(--color-blue-30));
 }
 
 .planet-firefox {
@@ -503,7 +533,7 @@ section {
   bottom: 20%;
   height: 280px;
   width: 280px;
-  filter: drop-shadow( 0 0 50px var(--color-orange-40));
+  filter: drop-shadow(0 0 50px var(--color-orange-40));
 }
 
 .testimonials {
@@ -757,8 +787,9 @@ footer {
   display: none;
 }
 
+/*
 @media (max-width: 860px) {
-  .testimonials  {
+  .testimonials {
     display: grid;
     gap: 15px;
     grid-template-columns: 1fr;
@@ -784,6 +815,7 @@ footer {
   }
 }
 
+
 @media (max-width: 780px) {
   .nav-container {
     justify-content: center;
@@ -791,11 +823,6 @@ footer {
 
   .nav-links {
     display: none;
-  }
-
-  .container {
-    padding-inline: 0.25rem;
-    padding-block: 32px;
   }
 
   .testimonials {
@@ -847,3 +874,4 @@ footer {
 .small-link {
   font-size: 80%;
 }
+ */
