About Pages: Moved who-we-are to about/, and created contact-us page.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -8,5 +8,6 @@
 // Page imports
 @import "./pages/home.less";
 @import "./pages/who-we-are.less";
+@import "./pages/contact-us.less";
 
 // Page template stuff
