Donations: Add page, mostly playing around with spacing and animations.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -1,11 +1,13 @@
 // 2024 Redesign Style
 @import "./new-style.less";
 @import "./new/animations.less";
+@import "./new/shadows.less";
 @import "./new/layout.less";
 @import "./new/components/buttons.less";
 @import "./new/components/site-nav.less";
 
 // Page imports
+@import "./pages/donations.less";
 @import "./pages/home.less";
 @import "./pages/who-we-are.less";
 @import "./pages/contact-us.less";
