--- a/assets/less/new/animations.less
+++ b/assets/less/new/animations.less
@@ -22,6 +22,15 @@
   }
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes float-around {
   0% {
     transform: translate(0, -4px);
