General: Add font size variables

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -2,6 +2,7 @@
 @import "./new-style.less";
 @import "./new/animations.less";
 @import "./new/shadows.less";
+@import "./new/sizing.less";
 @import "./new/layout.less";
 @import "./new/components/buttons.less";
 @import "./new/components/site-nav.less";
