--- a/assets/less/pages/donations.less
+++ b/assets/less/pages/donations.less
@@ -80,10 +80,9 @@
     }
 
     .faq-question {
-      //    &:extend(.mt-0, .mb-4, .font-2xl, .text-blue-dark, .items-center, .leading-normal);
       border-radius: 6px;
       border: 1px solid var(--color-gray-30);
-      padding: 1rem;
+      padding: 1rem 2rem 1rem 1rem;
       font-weight: 700;
       cursor: pointer;
       display: flex;
@@ -106,14 +105,13 @@
 
     .faq-answer {
       padding: 1rem;
-      //    &:extend(.font-md, .tracking-wide, .leading-loose, .mr-8, .ml-8);
 
+      // This feels wrong, but it works!
+      br {
+        margin-bottom: 1rem;
+      }
     }
-
-
   }
-
-
 }
 
 details[open] summary ~ * {
