Donation: Style adjustments, make the "modify donation" text not jump when the FRU component loads in.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -104,15 +104,20 @@ header {
   &.tight {
     max-inline-size: 50%;
   }
+  &.wide {
+    max-inline-size: 70%;
+  }
 
   @media (max-width: @md) {
     max-inline-size: 90%;
     margin-inline: unset;
     padding-inline: 1rem;
 
-    &.tight {
+    &.tight,
+    &.wide {
       max-inline-size: 90%;
     }
+
   }
 }
 
